--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.4.1",
+    "jquery": "^3.5.0",
     "react": "^16.13.1",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-owl-carousel": "^2.3.1",
+    "react-owl-carousel2": "^0.3.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
