--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "react-addons-css-transition-group": "^15.6.2",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-gsap": "^1.2.0",
     "react-owl-carousel": "^2.3.1",
     "react-owl-carousel2": "^0.3.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-scrollspy": "^3.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
